# QuadcopterV2

./: .gitignore  README.md
client/quadcopterv2client/: main.cpp  mainwindow.cpp  mainwindow.ui.autosave  quadcopterv2client.pro
server/: CMakeLists.txt  imu.cpp  imu.h  main.cpp  mpu9150.h
server/imulib/: CMakeLists.txt
